@@ -74,6 +74,7 @@ Changes since 1.4.0:
 * A sync manager is always enabled, if it contains registered process data.
 * Added a configuration switch --enable-wildcards to use 0xffffffff as a
 * wildcard for vendor ID and product code.
+* Added support for systemd.
 
 Changes in 1.4.0:
 
